tooling/nargo_cli/tests/snapshots/execution_failure/mutually_recursive_simple_functions/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Stack too deep
   ┌─ src/main.nr:13:5
   │
13 │     pong()
   │     ------
   │
   = Call stack:
     1: main
             at src/main.nr:4:9
     2: starter
             at src/main.nr:9:5
     ┌─ 3: ping
     │          at src/main.nr:13:5
     │  4: pong
     │          at src/main.nr:17:5
     └─ (repeated 5119 times)
     10241: ping
             at src/main.nr:13:5

Failed assertion
