tooling/nargo_cli/tests/snapshots/execution_failure/mutually_recursive_simple_functions/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Comptime Stack Overflow
   ┌─ src/main.nr:17:5
   │
17 │     ping()
   │     ------ Exceeded the recursion limit
   │
   = Call stack:
     1. src/main.nr:1:4
     2. src/main.nr:4:9
     3. src/main.nr:9:5
     4. src/main.nr:13:5
     5. src/main.nr:17:5
     6. src/main.nr:13:5
     7. src/main.nr:17:5
     8. src/main.nr:13:5
     9. src/main.nr:17:5
     10. src/main.nr:13:5
     11. src/main.nr:17:5
     12. src/main.nr:13:5
     13. src/main.nr:17:5
     14. src/main.nr:13:5
     15. src/main.nr:17:5
     16. src/main.nr:13:5
     17. src/main.nr:17:5
     18. src/main.nr:13:5
     19. src/main.nr:17:5
     20. src/main.nr:13:5
     21. src/main.nr:17:5
     22. src/main.nr:13:5
     23. src/main.nr:17:5
     24. src/main.nr:13:5
     25. src/main.nr:17:5
     26. src/main.nr:13:5
     27. src/main.nr:17:5
     28. src/main.nr:13:5
     29. src/main.nr:17:5
     30. src/main.nr:13:5
     31. src/main.nr:17:5
     32. src/main.nr:13:5
     33. src/main.nr:17:5
     34. src/main.nr:13:5
     35. src/main.nr:17:5
     36. src/main.nr:13:5
     37. src/main.nr:17:5
     38. src/main.nr:13:5
     39. src/main.nr:17:5
     40. src/main.nr:13:5
     41. src/main.nr:17:5
     42. src/main.nr:13:5
     43. src/main.nr:17:5
     44. src/main.nr:13:5
     45. src/main.nr:17:5
     46. src/main.nr:13:5
     47. src/main.nr:17:5
     48. src/main.nr:13:5
     49. src/main.nr:17:5
     50. src/main.nr:13:5
     51. src/main.nr:17:5
     52. src/main.nr:13:5
     53. src/main.nr:17:5
     54. src/main.nr:13:5
     55. src/main.nr:17:5
     56. src/main.nr:13:5
     57. src/main.nr:17:5
     58. src/main.nr:13:5
     59. src/main.nr:17:5
     60. src/main.nr:13:5
     61. src/main.nr:17:5
     62. src/main.nr:13:5
     63. src/main.nr:17:5
     64. src/main.nr:13:5
     65. src/main.nr:17:5
     66. src/main.nr:13:5
     67. src/main.nr:17:5
     68. src/main.nr:13:5
     69. src/main.nr:17:5
     70. src/main.nr:13:5
     71. src/main.nr:17:5
     72. src/main.nr:13:5
     73. src/main.nr:17:5
     74. src/main.nr:13:5
     75. src/main.nr:17:5
     76. src/main.nr:13:5
     77. src/main.nr:17:5
     78. src/main.nr:13:5
     79. src/main.nr:17:5
     80. src/main.nr:13:5
     81. src/main.nr:17:5
     82. src/main.nr:13:5
     83. src/main.nr:17:5
     84. src/main.nr:13:5
     85. src/main.nr:17:5
     86. src/main.nr:13:5
     87. src/main.nr:17:5
     88. src/main.nr:13:5
     89. src/main.nr:17:5
     90. src/main.nr:13:5
     91. src/main.nr:17:5
     92. src/main.nr:13:5
     93. src/main.nr:17:5
     94. src/main.nr:13:5
     95. src/main.nr:17:5
     96. src/main.nr:13:5
     97. src/main.nr:17:5
     98. src/main.nr:13:5
     99. src/main.nr:17:5
     100. src/main.nr:13:5

Error interpreting main function
